# AntiFold

./: pyproject.toml
antifold_output/: 3hfm_HLY.csv  8oi2_imgt_B.csv  alb23_igmt_A.csv  log.txt
data/: example_pdbs.csv
data/outputs/: 6y1l_imgt_HL.csv  6y1l_imgt_HL.fasta  8ee8_imgt_DC.csv  8ee8_imgt_DC.fasta  C143_immunebuilder_HL.csv  C143_immunebuilder_HL.fasta
notebooks/: tutorial.ipynb
