[project]
name = "antifold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython==1.83",
    "biotite==0.38",
    "numpy==1.26.*",
    "pandas==2.2.3",
    "pygam==0.9.0",
    "torch==2.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
